fix image quality options and labels

--- a/VN2Anki/Locales/Strings.es.resx
+++ b/VN2Anki/Locales/Strings.es.resx
@@ -219,4 +219,7 @@
   <data name="BtnSaveClose" xml:space="preserve">
     <value>SALVAR Y CERRAR</value>
   </data>
+  <data name="LblImageQuality" xml:space="preserve">
+    <value>Qualidad de la imagen</value>
+  </data>
 </root>
