add audio quality selection

--- a/VN2Anki/Locales/Strings.es.resx
+++ b/VN2Anki/Locales/Strings.es.resx
@@ -222,4 +222,7 @@
   <data name="LblImageQuality" xml:space="preserve">
     <value>Qualidad de la imagen</value>
   </data>
+  <data name="LblAudioQuality" xml:space="preserve">
+    <value>Formato del audio</value>
+  </data>
 </root>
